# sceneflow

./: .env.example  .gitignore  AIRTABLE_INTEGRATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analyze_face_data.py  approach.md  example_usage.py  main.py  pyproject.toml  speech_detector.py  test_correct_ear.py  test_detailed_analysis.py  test_fixes.py  test_fixes_simple.py  test_insightface.py  test_insightface_integration.py  test_multi_face.py
.github/: changelog_config.json
.github/workflows/: release.yml
cut_point_ranker/: __init__.py  extractors.py  normalizer.py  ranker.py  stability_analyzer.py
examples/: airtable_integration.py  airtable_integration_async.py  basic_usage.py  basic_usage_async.py  batch_processing.py  batch_processing_async.py  custom_config.py  custom_config_async.py  cut_video.py  cut_video_async.py  ranked_results.py  ranked_results_async.py  save_logs_example.py  url_download.py  url_download_async.py
src/sceneflow/: __init__.py  airtable_uploader.py  api.py  cli.py  config.py  energy_refiner.py  extractors.py  llm_selector.py  models.py  quality_gating.py  ranker.py  scorer.py  speech_detector.py  stability_analyzer.py
src/sceneflow/api/: __init__.py  _internal.py  pipeline.py  public.py
src/sceneflow/cli/: __init__.py  _internal.py  app.py
src/sceneflow/core/: __init__.py  quality_gating.py  ranker.py  scorer.py  stability_analyzer.py
src/sceneflow/detection/: __init__.py  energy_refiner.py  segment_analyzer.py  speech_detector.py
src/sceneflow/extraction/: __init__.py  extractor.py  face_metrics.py  frame_metrics.py
src/sceneflow/integration/: __init__.py  airtable.py  airtable_api.py
src/sceneflow/selection/: __init__.py  llm_selector.py
src/sceneflow/shared/: __init__.py  config.py  constants.py  exceptions.py  models.py  pipeline.py
src/sceneflow/utils/: __init__.py  formatting.py  output.py  video.py
tests/: __init__.py  conftest.py  helpers.py  test_energy_refiner.py  test_extractor.py  test_face_metrics.py  test_llm_selector.py  test_pipeline.py  test_ranker.py  test_scorer.py  test_speech_detector.py  test_video_utils.py
