[project]
name = "cut-point-ranker"
version = "0.1.0"
description = "A pure ranking algorithm for finding optimal cut points in AI-generated talking head videos"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "openai-whisper>=20250625",
    "opencv-python>=4.8.0",
    "silero-vad>=6.0.0",
]
